test/warnings/good/main_is_used.ulm
.text
main: ; the main label should be used implictly
    nop