test/warnings/bad/unused_label.ulm
.text
main:
    nop

f: ; f is unused
    nop